fix header alignment

--- a/src/App.css
+++ b/src/App.css
@@ -126,7 +126,7 @@ header {
 .header__wrap {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  justify-content: space-between;
   max-width: 1280px;
   padding-top: 60px;
   height: 400px;
@@ -135,6 +135,8 @@ header {
 
 .title__container {
   flex-grow: 1;
+  display: flex;
+  justify-content: space-around;
 }
 
 .title__wrapper {
